[package]
name = "volime"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
] }
ctrlc = "3.4"
parking_lot = "0.12"

[build-dependencies]
embed-resource = "2.4"
